<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_android_wear_notification_needs_update_text"><g id="app_name">%1$s</g> requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text"><g id="app_name">%1$s</g>" won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text"><g id="app_name">%1$s</g> requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text"><g id="app_name">%1$s</g>" won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by <g id="app_name">%1$s</g></string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text"><g id="app_name">%1$s</g> relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text"><g id="app_name">%1$s</g>" won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text"><g id="app_name">%1$s</g>" won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="dgts__cancel">Cancel</string>
    <string name="dgts__communication_error">Communication Error</string>
    <string name="dgts__confirmation_code">Confirmation code</string>
    <string name="dgts__confirmation_edit_hint">Enter confirmation code</string>
    <string name="dgts__confirmation_error">Unable to confirm your phone number</string>
    <string name="dgts__confirmation_error_alternative">Sorry, we are having trouble sending you a confirmation code.</string>
    <string name="dgts__confirmation_expired">This code has expired. Please resend confirmation code.</string>
    <string name="dgts__confirmation_send_text">Send confirmation code</string>
    <string name="dgts__confirmation_sending_text">Sending confirmation code</string>
    <string name="dgts__confirmation_sent_text">Sent confirmation code</string>
    <string name="dgts__confirmation_sms">Confirmation code: %1$s. Enter this code in %2$s</string>
    <string name="dgts__create_account_text">Create account</string>
    <string name="dgts__creating_account_text">Creating account</string>
    <string name="dgts__dismiss">Dismiss</string>
    <string name="dgts__find_your_friends">Find your friends</string>
    <string name="dgts__image_header_description">Image header for login</string>
    <string name="dgts__login_digits_text">Use my phone number</string>
    <string name="dgts__network_error">Please check your network and try again.</string>
    <string name="dgts__not_now">Not now</string>
    <string name="dgts__okay">Okay</string>
    <string name="dgts__phone_number_edit_hint">Your Number</string>
    <string name="dgts__phone_number_text">Enter your phone number</string>
    <string name="dgts__resend">Resend</string>
    <string name="dgts__resend_confirmation_text">Resend confirmation code</string>
    <string name="dgts__sign_in">Sign in</string>
    <string name="dgts__sign_in_error">We could not sign you in with Twitter at this time. Please try again later.</string>
    <string name="dgts__sign_in_twitter">Sign in with Twitter</string>
    <string name="dgts__signing_in">Signing in</string>
    <string name="dgts__success_desc">Success Icon</string>
    <string name="dgts__terms_text">By tapping %1$sSend confirmation code%1$s above, <u>Digits by Twitter</u>, will send you a SMS message to confirm your phone number.</string>
    <string name="dgts__terms_text_create">By tapping %1$sCreate account%1$s above, you agree to the <u>Terms of Service</u>, <u>Privacy Policy</u>, and <u>Cookies Policy</u> of Digits by Twitter, and that other users of this app can discover you by phone number and/or email.</string>
    <string name="dgts__terms_text_create_app">By tapping %1$sCreate account%1$s above, you agree to the <u>Terms of Service</u>, <u>Privacy Policy</u>, and <u>Cookies Policy</u> of Digits by Twitter, and that other users of %1$s can discover you by phone number and/or email.</string>
    <string name="dgts__try_again">Try Again</string>
    <string name="dgts__try_again_confirmation">Please check your code and try again.</string>
    <string name="dgts__try_again_phone_number">Please check your number and try again.</string>
    <string name="dgts__try_another_phone">Try a different phone number</string>
    <string name="dgts__upload_contacts">"We use Digits by Twitter to find more of your friends who use this app. When you tap Okay, we'll upload your address book to Digits by Twitter so that we can help you find users of %1$s that you know or help other users of %1$s find you."</string>
    <string name="tw__loading_tweet">Loading Tweet</string>
    <string name="tw__login_btn_txt">Log in with Twitter</string>
    <string name="tw__relative_date_format_long">MM/dd/yy</string>
    <string name="tw__relative_date_format_short">MMM dd</string>
    <string name="tw__share_content_format">"Check out @%1$s's Tweet: https://twitter.com/%1$s/status/%2$s"</string>
    <string name="tw__share_subject_format">Tweet from %1$s (@%2$s)</string>
    <string name="tw__share_tweet">Share Tweet</string>
    <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
    <string name="Default">Default</string>
    <string name="Term_of_Use">Terms of Use</string>
    <string name="YouTube">YouTube</string>
    <string name="accept">accept</string>
    <string name="action_settings">settings</string>
    <string name="add_more_photos">add more photos</string>
    <string name="all_message">all</string>
    <string name="allow">allow</string>
    <string name="also_comment">also commented on this musical</string>
    <string name="animated_thumbnails">animated thumbnails</string>
    <string name="app_not_installed">%s is not installed, please install it first and retry.</string>
    <string name="approve_or_ignore_requests">approve/ignore requests</string>
    <string name="audio_mixer">audio mixer</string>
    <string name="banned_dialog_btnstr">got it</string>
    <string name="be_patient">Be Patient</string>
    <string name="btn_done">Done</string>
    <string name="cancel">cancel</string>
    <string name="charactersthan140">Please leave a reason ( &lt; 140 characters)</string>
    <string name="clear_cache">clear cache</string>
    <string name="comment_zero">comment(0)</string>
    <string name="copyright_policy">copyright policy</string>
    <string name="create_account">create account</string>
    <string name="description">short bio</string>
    <string name="edit_profile">edit profile</string>
    <string name="follow_us_on_instagram">follow us on instagram</string>
    <string name="follow_us_on_twitter">follow us on twitter</string>
    <string name="hint_default">\"live with passion, live musical.ly\"</string>
    <string name="instagram_username">instagram ID</string>
    <string name="invite_friends">invite friends</string>
    <string name="like_us_on_facebook">like us on facebook</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="rate_this_app">rate this app</string>
    <string name="report_abuse">report abuse</string>
    <string name="sign_out">sign out</string>
    <string name="sign_up">sign up</string>
    <string name="sign_up_tip">"You must be above the age of 13 to use
our service. By signing up, you agree to
the Terms of Use &amp; Privacy Policy."</string>
    <string name="string_edit_hinted">say something nice...</string>
    <string name="tell_us_how_to_improve">tell us how to improve</string>
    <string name="term_of_use">terms of use</string>
    <string name="tx_mail_address_hint">e-mail address</string>
    <string name="tx_nickname_hint">create a username</string>
    <string name="tx_password_hint">create a password</string>
    <string name="yourname">your name</string>
    <string name="fa_facebook">{fa-facebook}</string>
    <string name="fa_instagram">{fa-instagram}</string>
    <string name="fa_times">{fa-times}</string>
    <string name="fa_twitter">{fa-twitter}</string>
    <string name="trigger_crash">trigger crash</string>
</resources>