<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:fresco="http://schemas.android.com/apk/res-auto" xmlns:ioniconview="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/titleDiv" android:background="@drawable/action_bar_bg" android:layout_width="fill_parent" android:layout_height="@dimen/title_height">
        <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/title_fontsize" android:textColor="@android:color/white" android:gravity="center" android:id="@id/tx_setting_title" android:layout_width="fill_parent" android:layout_height="@dimen/title_height" android:text="@string/edit_profile" ioniconview:typeface="regularAvenir" />
        <be.webelite.ion.IconView android:textSize="@dimen/title_fontsize" android:textColor="@android:color/white" android:gravity="center" android:id="@id/btn_exit" android:layout_width="@dimen/title_height" android:layout_height="@dimen/title_height" ioniconview:name="ion_android_close" />
        <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/title_fontsize" android:textColor="@android:color/white" android:gravity="center" android:id="@id/tx_setting_done" android:layout_width="wrap_content" android:layout_height="@dimen/title_height" android:layout_marginRight="10.0dip" android:text="@string/btn_done" android:layout_alignParentRight="true" ioniconview:typeface="demiBlodAvenir" />
    </RelativeLayout>
    <ScrollView android:background="@color/setting_gray" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:layout_below="@id/titleDiv">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/div_touchline" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.facebook.drawee.view.SimpleDraweeView android:id="@id/fimg_setting_usericon" android:layout_width="@dimen/fimg_profile_usercycleimg_w" android:layout_height="@dimen/fimg_profile_usercycleimg_h" android:layout_margin="@dimen/profile_usericon_mg" ioniconview:placeholderImage="@drawable/default_user_icon" ioniconview:actualImageScaleType="focusCrop" ioniconview:roundedCornerRadius="180.0dip" />
            <LinearLayout android:orientation="vertical" android:id="@id/div_userInformation" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/setting_fontsize" android:textColor="@color/light_gray" android:paddingLeft="@dimen/profile_line_mgl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/musical.ly_username" />
                <View android:background="@color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0px" />
                <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirEditText android:textSize="@dimen/setting_fontsize" android:textColorHint="@color/light_gray" android:gravity="center_vertical" android:id="@id/tx_setting_handlename" android:background="@android:color/white" android:paddingLeft="@dimen/profile_line_mgl" android:layout_width="fill_parent" android:layout_height="@dimen/profile_div_height" android:hint="@string/musical.ly_username" android:singleLine="true" ioniconview:typeface="avenir" />
                <View android:background="@color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0px" />
                <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/setting_fontsize" android:textColor="@color/light_gray" android:paddingLeft="@dimen/profile_line_mgl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yourname" />
                <View android:background="@color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0px" />
                <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirEditText android:textSize="@dimen/setting_fontsize" android:textColorHint="@color/light_gray" android:gravity="center_vertical" android:id="@id/tx_setting_nickname" android:background="@android:color/white" android:paddingLeft="@dimen/profile_line_mgl" android:layout_width="fill_parent" android:layout_height="@dimen/profile_div_height" android:singleLine="true" ioniconview:typeface="avenir" />
                <View android:background="@color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0px" />
                <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/setting_fontsize" android:textColor="@color/light_gray" android:paddingLeft="@dimen/profile_line_mgl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/instagram_username" />
                <View android:background="@color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0px" />
                <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirEditText android:textSize="@dimen/setting_fontsize" android:textColorHint="@color/light_gray" android:gravity="center_vertical" android:id="@id/tx_setting_instagramid" android:background="@android:color/white" android:paddingLeft="@dimen/profile_line_mgl" android:layout_width="fill_parent" android:layout_height="@dimen/profile_div_height" android:singleLine="true" ioniconview:typeface="avenir" />
                <View android:background="@color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0px" />
                <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/setting_fontsize" android:textColor="@color/light_gray" android:paddingLeft="@dimen/profile_line_mgl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/description" />
                <View android:background="@color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0px" />
                <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirEditText android:textSize="@dimen/setting_fontsize" android:textColorHint="@color/light_gray" android:gravity="top" android:id="@id/setting_sign" android:background="@android:color/white" android:paddingLeft="@dimen/profile_line_mgl" android:layout_width="fill_parent" android:layout_height="@dimen/profile_double_div_height" android:hint="@string/hint_default" android:maxLength="140" ioniconview:typeface="avenir" />
                <View android:background="@color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0px" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/div_otherinformation" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/setting_fontsize" android:gravity="center_vertical" android:id="@id/setting_invite_friends" android:background="@drawable/bg_gray_solid_justupdown" android:layout_width="fill_parent" android:layout_height="@dimen/profile_div_height" android:text="@string/invite_friends" ioniconview:typeface="avenir" />
                <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/setting_fontsize" android:gravity="center_vertical" android:id="@id/setting_rate_this_app" android:background="@drawable/bg_gray_solid_justupdown" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/profile_div_height" android:text="@string/rate_this_app" ioniconview:typeface="avenir" />
                <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/setting_fontsize" android:gravity="center_vertical" android:id="@id/setting_tell_us_how_improve" android:background="@drawable/bg_gray_solid_justupdown" android:layout_width="fill_parent" android:layout_height="@dimen/profile_div_height" android:text="@string/tell_us_how_to_improve" ioniconview:typeface="avenir" />
                <LinearLayout android:textSize="@dimen/setting_fontsize" android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/setting_facebook" android:background="@drawable/bg_gray_solid_justupdown" android:layout_width="fill_parent" android:layout_height="@dimen/profile_div_height" android:drawablePadding="@dimen/img_social_icon_pd">
                    <IconTextView android:textSize="@dimen/div_userinformation_myprofile_fontsize_num" android:textColor="@android:color/white" android:gravity="center" android:background="@drawable/bg_setting_radius_facebook" android:layout_width="@dimen/setting_share_icon_wh" android:layout_height="@dimen/setting_share_icon_wh" android:text="@string/fa_facebook" android:shadowDx="3.0" android:shadowRadius="1.0" />
                    <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/setting_fontsize" android:gravity="center_vertical" android:id="@id/tx_facebook" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/setting_share_tx_mgl" android:text="@string/like_us_on_facebook" ioniconview:typeface="avenir" />
                </LinearLayout>
                <LinearLayout android:textSize="@dimen/setting_fontsize" android:orientation="horizontal" android:id="@id/setting_twitter" android:background="@drawable/bg_gray_solid_justupdown" android:layout_width="fill_parent" android:layout_height="@dimen/profile_div_height" android:drawablePadding="@dimen/img_social_icon_pd">
                    <IconTextView android:textSize="@dimen/div_userinformation_myprofile_fontsize_num" android:textColor="@android:color/white" android:gravity="center" android:background="@drawable/bg_setting_radius_twitter" android:layout_width="@dimen/setting_share_icon_wh" android:layout_height="@dimen/setting_share_icon_wh" android:text="@string/fa_twitter" android:shadowDx="3.0" android:shadowRadius="1.0" />
                    <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/setting_fontsize" android:gravity="center_vertical" android:id="@id/tx_twitter" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/setting_share_tx_mgl" android:text="@string/follow_us_on_twitter" ioniconview:typeface="avenir" />
                </LinearLayout>
                <LinearLayout android:textSize="@dimen/setting_fontsize" android:orientation="horizontal" android:id="@id/setting_instagram" android:background="@drawable/bg_gray_solid_justupdown" android:layout_width="fill_parent" android:layout_height="@dimen/profile_div_height" android:drawablePadding="@dimen/img_social_icon_pd">
                    <IconTextView android:textSize="@dimen/div_userinformation_myprofile_fontsize_num" android:textColor="@android:color/white" android:gravity="center" android:background="@drawable/bg_radius_instagram" android:layout_width="@dimen/setting_share_icon_wh" android:layout_height="@dimen/setting_share_icon_wh" android:text="@string/fa_instagram" android:shadowDx="3.0" android:shadowRadius="1.0" />
                    <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/setting_fontsize" android:gravity="center_vertical" android:id="@id/tx_instagram" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/setting_share_tx_mgl" android:text="@string/follow_us_on_instagram" ioniconview:typeface="avenir" />
                </LinearLayout>
                <View android:background="@color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0px" />
                <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/setting_fontsize" android:gravity="center_vertical" android:id="@id/term_of_use" android:background="@drawable/bg_gray_solid_justupdown" android:layout_width="fill_parent" android:layout_height="@dimen/profile_div_height" android:layout_marginTop="@dimen/setting_div_mgt" android:text="@string/term_of_use" ioniconview:typeface="avenir" />
                <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/setting_fontsize" android:gravity="center_vertical" android:id="@id/setting_privacy_policy" android:background="@drawable/bg_gray_solid_justupdown" android:layout_width="fill_parent" android:layout_height="@dimen/profile_div_height" android:text="@string/privacy_policy" ioniconview:typeface="avenir" />
                <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/setting_fontsize" android:gravity="center_vertical" android:id="@id/setting_copyright_policy" android:background="@drawable/bg_gray_solid_justupdown" android:layout_width="fill_parent" android:layout_height="@dimen/profile_div_height" android:text="@string/copyright_policy" ioniconview:typeface="avenir" />
                <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/setting_fontsize" android:gravity="center_vertical" android:id="@id/setting_trigger_crash" android:background="@drawable/bg_gray_solid_justupdown" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/profile_div_height" android:text="@string/trigger_crash" ioniconview:typeface="avenir" />
                <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/setting_fontsize" android:gravity="center_vertical" android:id="@id/setting_clear_cache" android:background="@drawable/bg_gray_solid_justupdown" android:layout_width="fill_parent" android:layout_height="@dimen/profile_div_height" android:layout_marginTop="@dimen/setting_div_mgt" android:text="@string/clear_cache" ioniconview:typeface="avenir" />
                <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/setting_fontsize" android:textColor="@color/red" android:gravity="center_vertical" android:id="@id/setting_sign_out" android:background="@drawable/bg_gray_solid_justupdown" android:layout_width="fill_parent" android:layout_height="@dimen/profile_div_height" android:text="@string/sign_out" ioniconview:typeface="avenir" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.zhiliaoapp.musically.musuikit.loadingview.LoadingView android:id="@id/photoloading" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</RelativeLayout>