<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/titleDiv" android:background="@drawable/action_bar_bg" android:layout_width="fill_parent" android:layout_height="@dimen/title_height">
        <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/title_fontsize" android:textColor="@android:color/white" android:gravity="center" android:id="@id/tx_signup_title" android:layout_width="fill_parent" android:layout_height="@dimen/title_height" android:text="@string/sign_up" app:typeface="demiBlodAvenir" />
        <include android:id="@id/btn_exit" android:layout_width="@dimen/title_height" android:layout_height="@dimen/title_height" android:layout_alignParentLeft="true" layout="@layout/layout_icon_exit" />
    </RelativeLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/titleDiv">
        <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirEditText android:textSize="@dimen/div_signup_et_fontsize" android:textColorHint="@color/gray_999" android:id="@id/tx_mail_address" android:background="@drawable/bg_gray_solid_justupdown" android:paddingLeft="@dimen/div_signup_pd_l" android:layout_width="fill_parent" android:layout_height="@dimen/div_signup_h" android:hint="@string/tx_mail_address_hint" android:singleLine="true" android:inputType="textEmailAddress" app:typeface="regularAvenir" />
        <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirEditText android:textSize="@dimen/div_signup_et_fontsize" android:textColorHint="@color/gray_999" android:id="@id/tx_nickname" android:background="@drawable/bg_gray_solid_justupdown" android:paddingLeft="@dimen/div_signup_pd_l" android:layout_width="fill_parent" android:layout_height="@dimen/div_signup_h" android:hint="@string/tx_nickname_hint" android:singleLine="true" app:typeface="regularAvenir" />
        <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirEditText android:textSize="@dimen/div_signup_et_fontsize" android:textColorHint="@color/gray_999" android:id="@id/tx_password" android:background="@drawable/bg_gray_solid_justupdown" android:paddingLeft="@dimen/div_signup_pd_l" android:layout_width="fill_parent" android:layout_height="@dimen/div_signup_h" android:hint="@string/tx_password_hint" android:singleLine="true" android:inputType="textPassword" app:typeface="regularAvenir" />
        <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/btn_create_account_fontsize" android:textColor="@android:color/white" android:gravity="center" android:id="@id/btn_create_account" android:background="@drawable/bg_green_createbtn" android:layout_width="@dimen/btn_create_account_w" android:layout_height="@dimen/btn_create_account_h" android:layout_marginTop="@dimen/btn_create_account_mgt" android:text="@string/create_account" app:typeface="demiBlodAvenir" />
        <com.zhiliaoapp.musically.musuikit.ownfonttextview.AvenirTextView android:textSize="@dimen/div_signup_et_fontsize" android:textColor="@color/gray_999" android:gravity="center" android:id="@id/tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/btn_create_account_mgt" android:text="@string/sign_up_tip" app:typeface="regularAvenir" />
    </LinearLayout>
    <com.zhiliaoapp.musically.musuikit.loadingview.LoadingView android:id="@id/loadingview" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</RelativeLayout>